--- a/flask-app/application/templates/modals/show-message.html
+++ b/flask-app/application/templates/modals/show-message.html
@@ -45,7 +45,7 @@
           for="lockDatabase">Lock the database ?</label>
         </div>
 
-        <input type="hidden" name="_csrf_token" value="{{ csrf_token() }}">
+        {% include 'snips/_csrf_input.html' %}
         <button name="action" value="show"  type="submit" class="btn btn-warning ml-3">Show</button>
         <button name="action" value="hide" type="submit" class="btn btn-success ml-3">Unlock &amp; Hide</button>
     {% endif %}
