--- a/flask-app/application/templates/intro.html
+++ b/flask-app/application/templates/intro.html
@@ -73,7 +73,7 @@ Intro
         </div>
       </div>
     </fieldset>
-    <input type="hidden" name="_csrf_token" value="{{ csrf_token() }}">
+    {% include 'snips/_csrf_input.html' %}
     <button type="submit" class="btn btn-primary">Apply</button>
     </form>
 
