--- a/flask-app/application/templates/modals/clipboard.html
+++ b/flask-app/application/templates/modals/clipboard.html
@@ -37,7 +37,7 @@
 
       </div>
       <div class="modal-footer">
-        <input type="hidden" name="_csrf_token" value="{{ csrf_token() }}">
+        {% include 'snips/_csrf_input.html' %}
         <button type="button" class="btn btn-link ml-3" data-dismiss="modal">Close</button>
         <button type="submit" name="action" value="clear" class="btn btn-outline-warning ml-3">Clear All</button>
         <button type="submit" name="action" value="remove" class="btn btn-primary ml-3">Remove</button>
