--- a/flask-app/application/templates/modals/edit-concept.html
+++ b/flask-app/application/templates/modals/edit-concept.html
@@ -174,7 +174,7 @@
                  value="{{ item['label']|truncate(50, True) }}">
 
           <input type="hidden" id="formchanged-{{ item['cui'] }}" name="form_changed" value="false">
-          <input type="hidden" name="_csrf_token" value="{{ csrf_token() }}">
+          {% include 'snips/_csrf_input.html' %}
 
         </div>
 
